# agent_web_compiler

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_web_compiler/: __init__.py
agent_web_compiler/actiongraph/: __init__.py  api_synthesizer.py  graph_builder.py  hybrid_executor.py  models.py
agent_web_compiler/adapters/: __init__.py  anthropic_adapter.py  browser_use_adapter.py  langchain_adapter.py  openai_adapter.py
agent_web_compiler/aligners/: dom_aligner.py  screenshot_aligner.py
agent_web_compiler/api/: __init__.py  batch.py  compile.py
agent_web_compiler/cli/: __init__.py  main.py  repl.py
agent_web_compiler/core/: __init__.py  action.py  block.py  config.py  document.py  errors.py  interfaces.py  provenance.py
agent_web_compiler/exporters/: debug_exporter.py  json_exporter.py  llm_formatters.py  markdown_exporter.py  token_budget.py
agent_web_compiler/extractors/: action_extractor.py  asset_extractor.py  entity_extractor.py  nav_graph.py
agent_web_compiler/index/: __init__.py  embeddings.py  engine.py  ingestion.py  schema.py
agent_web_compiler/memory/: __init__.py  site_memory.py
agent_web_compiler/middleware/: __init__.py  browser_middleware.py
agent_web_compiler/normalizers/: html_normalizer.py  site_profile.py
agent_web_compiler/pipeline/: api_compiler.py  builder.py  cache.py  compiler.py  docx_compiler.py  pdf_compiler.py  stream_compiler.py  validator.py
agent_web_compiler/plugins/: __init__.py  base.py  registry.py
agent_web_compiler/provenance/: __init__.py  citation.py  engine.py  evidence.py  snapshot.py  tracer.py
agent_web_compiler/publisher/: __init__.py  actions_json.py  agent_sitemap.py  content_json.py  delta_feed.py  domain_skill.py  llms_txt.py  site_publisher.py
agent_web_compiler/runtime/: __init__.py
agent_web_compiler/search/: __init__.py  action_runtime.py  agent_search.py  grounded_answer.py  query_planner.py  retriever.py
agent_web_compiler/segmenters/: html_segmenter.py  query_filter.py  salience.py
agent_web_compiler/serving/: __init__.py  mcp_server.py  rest_server.py
agent_web_compiler/sources/: __init__.py  browser_harness_fetcher.py  crawler.py  file_reader.py  http_fetcher.py  playwright_fetcher.py
agent_web_compiler/standards/: agent_json.py
agent_web_compiler/utils/: doc_diff.py  dom.py  text.py
bench/: comparison.py  framework.py
bench/eval/: metrics.py  qa_eval.py  search_quality.py
bench/scripts/: report.py
bench/tasks/: README.md  academic_paper.html  academic_paper.json  api_docs_complex.html  api_docs_complex.json  blog_article.html  (+25 more)
docs/: agent-json-spec.md  architecture.md  contributing.md  integration-with-browser-harness.md  provenance.md  publisher.md  roadmap.md  schema.md
examples/: browser_harness_integration.py
(+82 files in other folders)
