[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-web-compiler"
version = "0.7.0"
description = "Compile the Human Web into the Agent Web — turn webpages, PDFs, and documents into agent-native objects with semantic blocks, action affordances, and grounded provenance."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "agent-web-compiler contributors" },
]
keywords = [
    "agent",
    "web",
    "compiler",
    "semantic",
    "llm",
    "browser-agent",
    "rag",
    "pdf",
    "html",
    "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "lxml>=5.0",
    "cssselect>=1.2",
    "httpx>=0.27",
    "click>=8.0",
    "rich>=13.0",
    "eval_type_backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]
pdf = ["pymupdf>=1.24"]
docx = ["python-docx>=1.0"]
docling = ["docling>=2.0"]
serve = ["fastapi>=0.110", "uvicorn>=0.29", "mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = [
    "agent-web-compiler[browser,pdf,docx,serve,dev]",
]

[project.scripts]
awc = "agent_web_compiler.cli.main:cli"

[project.urls]
Homepage = "https://github.com/anthropics/agent-web-compiler"
Documentation = "https://github.com/anthropics/agent-web-compiler/tree/main/docs"
Repository = "https://github.com/anthropics/agent-web-compiler"
Issues = "https://github.com/anthropics/agent-web-compiler/issues"

[tool.hatch.build.targets.wheel]
packages = ["agent_web_compiler"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501", "SIM108", "B905"]

[tool.ruff.lint.isort]
known-first-party = ["agent_web_compiler"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "golden: marks tests as golden snapshot tests",
]
